RESOLVED FIXED48063
[Qt] PluginInfoStore does not set up mime types for plugins
https://bugs.webkit.org/show_bug.cgi?id=48063
Summary [Qt] PluginInfoStore does not set up mime types for plugins
Balazs Kelemen
Reported 2010-10-21 04:43:05 PDT
This just needs a typo fix, actually PluginInfoStore::getPluginInfo just forgot to set the values to it's (out) parameter. It was my fault.
Attachments
Patch (1.89 KB, patch)
2010-10-21 07:16 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2010-10-21 07:16:37 PDT
Andreas Kling
Comment 2 2010-10-21 08:30:12 PDT
Comment on attachment 71433 [details] Patch r=me
Balazs Kelemen
Comment 3 2010-10-21 08:51:16 PDT
Comment on attachment 71433 [details] Patch Clearing flags on attachment: 71433 Committed r70237: <http://trac.webkit.org/changeset/70237>
Balazs Kelemen
Comment 4 2010-10-21 08:51:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.