2010-10-21  Balazs Kelemen  <kbalazs@webkit.org>

Reviewed by Andreas Kling.

        [Qt] PluginInfoStore does not set up mime types for plugins
        https://bugs.webkit.org/show_bug.cgi?id=48063

        * UIProcess/Plugins/qt/PluginInfoStoreQt.cpp:
        (WebKit::PluginInfoStore::getPluginInfo): Store the mime types
        that are supported by the plugin into the plugin argument.

Canonical link: https://commits.webkit.org/60788@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70237 268f45cc-cd09-0410-ab3c-d52691b4dbfc