WebKit2/UIProcess/Plugins/qt/PluginInfoStoreQt.cpp
@@ -72,11 +72,12 @@ bool PluginInfoStore::getPluginInfo(const String& pluginPath, Plugin& plugin)
 
     const MIMEToDescriptionsMap& descriptions = package->mimeToDescriptions();
     const MIMEToExtensionsMap& extensions = package->mimeToExtensions();
-    Vector<MimeClassInfo> mimes(descriptions.size());
     MIMEToDescriptionsMap::const_iterator descEnd = descriptions.end();
+    plugin.info.mimes.reserveCapacity(descriptions.size());
     unsigned i = 0;
     for (MIMEToDescriptionsMap::const_iterator it = descriptions.begin(); it != descEnd; ++it) {
-        MimeClassInfo& mime = mimes[i++];
+        plugin.info.mimes.uncheckedAppend(MimeClassInfo());
+        MimeClassInfo& mime = plugin.info.mimes[i++];
         mime.type = it->first;
         mime.desc = it->second;
         MIMEToExtensionsMap::const_iterator extensionIt = extensions.find(it->first);
